# loader

./: README.md  app1.js  app2.js  index.html  ordinary-module.js  service.js  somedata1.json  somedata2.json  somesnippet.html
loaders/: html.js  json.js
service/: dummy.js  init.js  install.js  main.js  sandbox.js  util.js  verify.js
service/import_scanner/: .gitignore  Cargo.toml  README.md  build.bat
service/import_scanner/pkg/: import_scanner.js  import_scanner_bg.wasm  package.json
service/import_scanner/src/: lib.rs
