[package]
name = "import_scanner"
version = "0.1.0"
authors = ["Bert Belder <bertbelder@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
swc_common = { version = "0.10.3", features = ["sourcemap"] }
swc_ecmascript = { version = "0.9.3", default-features = false, features = [
  "codegen",
  "parser",
  "visit"
] }
serde = { version = "1.0.116", features = ["derive"] }
serde_derive = "1.0.116"
serde_json = { version = "1.0.58", features = ["preserve_order"] }
wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"] }
url = "2.1.1"
anyhow = "1.0.33"
swc_atoms = "0.2.4"
base64 = "0.13.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[profile.release]
lto = "fat"
opt-level = "z"
panic = "abort"
